--- a/_.env.example
+++ b/_.env.example
@@ -1,5 +1,4 @@
-# .env.example
-TELEGRAM_BOT_TOKEN=PUT_YOUR_NEW_TOKEN_HERE
-ADMIN_ID=8466023768
-ADMIN_USERNAME=@your_admin_username
-LOG_LEVEL=INFO
+.TELEGRAM_BOT_TOKEN=AAFYep-OHatme2n55V8E_VLr6pdN8JNIhiw
+‏ADMIN_ID=8466023768
+‏LOG_LEVEL=INFO
+‏
